feat(customer): extract LoyaltyCard class to dedicated entity and refactor related methods