@@ -7,6 +7,7 @@ import org.springframework.security.crypto.bcrypt.BCrypt;
 
 import java.time.LocalDate;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 import java.util.regex.Pattern;
@@ -15,23 +16,14 @@ import java.util.stream.Collectors;
 
 public class EZShop implements EZShopInterface {
 
-    private final BalanceOperationRepository balanceOperationRepository;
-    private final CustomerRepository customerRepository;
-    private final OrderRepository orderRepository;
-    private final ProductTypeRepository productTypeRepository;
-    private final SaleTransactionRepository saleTransactionRepository;
-    private final UserRepository userRepository;
-    private User loggedUser;
-
-    public EZShop() {
-        balanceOperationRepository = new BalanceOperationRepository();
-        customerRepository = new CustomerRepository();
-        orderRepository = new OrderRepository();
-        productTypeRepository = new ProductTypeRepository();
-        saleTransactionRepository = new SaleTransactionRepository();
-        userRepository = new UserRepository();
-        loggedUser = null;
-    }
+    private final BalanceOperationRepository balanceOperationRepository = new BalanceOperationRepository();
+    private final CustomerRepository customerRepository = new CustomerRepository();
+    private final LoyaltyCardRepository loyaltyCardRepository = new LoyaltyCardRepository();
+    private final OrderRepository orderRepository = new OrderRepository();
+    private final ProductTypeRepository productTypeRepository = new ProductTypeRepository();
+    private final SaleTransactionRepository saleTransactionRepository = new SaleTransactionRepository();
+    private final UserRepository userRepository = new UserRepository();
+    private User loggedUser = null;
 
     @Override
     public void reset() {
@@ -40,17 +32,17 @@ public class EZShop implements EZShopInterface {
 
     @Override
     public Integer createUser(String username, String password, String role) throws InvalidUsernameException, InvalidPasswordException, InvalidRoleException {
-    	if(username == null || username.isEmpty()) {
-    		throw new InvalidUsernameException();
-    	}
-    	if(password == null || password.isEmpty()) {
-    		throw new InvalidPasswordException();
-    	}
-    	if(!isValidRole(role)) { 
-    		throw new InvalidRoleException();
-    	}
-    	
-    	User user = new UserImpl();
+        if (username == null || username.isEmpty()) {
+            throw new InvalidUsernameException();
+        }
+        if (password == null || password.isEmpty()) {
+            throw new InvalidPasswordException();
+        }
+        if (!isValidRole(role)) {
+            throw new InvalidRoleException();
+        }
+
+        User user = new UserImpl();
         user.setUsername(username);
         user.setPassword(BCrypt.hashpw(password, BCrypt.gensalt()));
         user.setRole(role);
@@ -59,77 +51,77 @@ public class EZShop implements EZShopInterface {
 
     @Override
     public boolean deleteUser(Integer id) throws InvalidUserIdException, UnauthorizedException {
-    	if(!isValidId(id)) { 
-    		throw new InvalidUserIdException();
-    	}
-    	if(!isAuthorized(loggedUser.getRole())) {
-			throw new UnauthorizedException();
-    	}
-    	
-    	User user = this.userRepository.find(id);
-    	if(user != null) {
-        	this.userRepository.delete(user);
-        	return true;
+        if (!isValidId(id)) {
+            throw new InvalidUserIdException();
         }
-    	
-    	return false;    
-}
+        if (!isAuthorized(loggedUser.getRole())) {
+            throw new UnauthorizedException();
+        }
+
+        User user = this.userRepository.find(id);
+        if (user != null) {
+            this.userRepository.delete(user);
+            return true;
+        }
+
+        return false;
+    }
 
     @Override
     public List<User> getAllUsers() throws UnauthorizedException {
-    	return userRepository.findAll().stream().collect(Collectors.toList());
+        return userRepository.findAll();
     }
 
     @Override
     public User getUser(Integer id) throws InvalidUserIdException, UnauthorizedException {
-    	if(!isValidId(id)) { 
-    		throw new InvalidUserIdException();
-    	}
-    	if(!isAuthorized(loggedUser.getRole())) {
-			throw new UnauthorizedException();
-    	}
-  	
-    	return this.userRepository.find(id);
+        if (!isValidId(id)) {
+            throw new InvalidUserIdException();
+        }
+        if (!isAuthorized(loggedUser.getRole())) {
+            throw new UnauthorizedException();
+        }
+
+        return this.userRepository.find(id);
     }
 
     @Override
     public boolean updateUserRights(Integer id, String role) throws InvalidUserIdException, InvalidRoleException, UnauthorizedException {
-    	if(!isValidId(id)) {
-    		throw new InvalidUserIdException();
-    	}
-    	if(!isValidRole(role)) {
-    		throw new InvalidRoleException();
-    	}
-    	if(!isAuthorized(loggedUser.getRole())) {
-			throw new UnauthorizedException();
-    	}
-    	
-    	User user = this.userRepository.find(id); 
-    	if (user != null) {
-        	user.setRole(role);
-        	return true;
+        if (!isValidId(id)) {
+            throw new InvalidUserIdException();
         }
-     
-    	return false;
+        if (!isValidRole(role)) {
+            throw new InvalidRoleException();
+        }
+        if (!isAuthorized(loggedUser.getRole())) {
+            throw new UnauthorizedException();
+        }
+
+        User user = this.userRepository.find(id);
+        if (user != null) {
+            user.setRole(role);
+            return true;
+        }
+
+        return false;
     }
 
     @Override
     public User login(String username, String password) throws InvalidUsernameException, InvalidPasswordException {
-    	User user = this.userRepository.findByUsername(username);
+        User user = this.userRepository.findByUsername(username);
         if (user == null) {
             throw new InvalidUsernameException();
         }
         if (!BCrypt.checkpw(password, user.getPassword())) {
             throw new InvalidPasswordException();
         }
-        
+
         loggedUser = user;
         return user;
     }
 
     @Override
     public boolean logout() {
-    	// loggedUser = null;
+        // loggedUser = null;
         return false;
     }
 
@@ -145,19 +137,19 @@ public class EZShop implements EZShopInterface {
 
     @Override
     public boolean deleteProductType(Integer id) throws InvalidProductIdException, UnauthorizedException {
-    	if(!isValidId(id)) {
-    		throw new InvalidProductIdException();
-    	}
-    	// se non c'è nessuno loggato, come ho accesso qui ?
-    	if(loggedUser == null || !isAuthorized(loggedUser.getRole())) { 
-    		throw new UnauthorizedException();
-    	}
+        if (!isValidId(id)) {
+            throw new InvalidProductIdException();
+        }
+        // se non c'è nessuno loggato, come ho accesso qui ?
+        if (loggedUser == null || !isAuthorized(loggedUser.getRole())) {
+            throw new UnauthorizedException();
+        }
         return false;
     }
 
     @Override
     public List<ProductType> getAllProductTypes() throws UnauthorizedException {
-        return productTypeRepository.findAll().stream().collect(Collectors.toList());
+        return productTypeRepository.findAll();
     }
 
     @Override
@@ -168,50 +160,50 @@ public class EZShop implements EZShopInterface {
     @Override
     public List<ProductType> getProductTypesByDescription(String description) throws UnauthorizedException {
         return productTypeRepository.findAll().stream()
-        		.filter(t -> t.getProductDescription().contains(description))
-        		.collect(Collectors.toList());
+                .filter(t -> t.getProductDescription().contains(description))
+                .collect(Collectors.toList());
     }
 
     @Override
     public boolean updateQuantity(Integer productId, int toBeAdded) throws InvalidProductIdException, UnauthorizedException {
-        if(!isValidId(productId)) {
-        	throw new InvalidProductIdException();
+        if (!isValidId(productId)) {
+            throw new InvalidProductIdException();
         }
-        if(!isAuthorized(loggedUser.getRole())) {
-        	throw new UnauthorizedException();
+        if (!isAuthorized(loggedUser.getRole())) {
+            throw new UnauthorizedException();
         }
-        
+
         ProductType product = this.productTypeRepository.find(productId);
         int newQuantity = product.getQuantity() + toBeAdded;
-        
-        if(newQuantity >= 0 && !product.getLocation().isEmpty()) { 
-        	product.setQuantity(newQuantity);
-        	return true;
+
+        if (newQuantity >= 0 && !product.getLocation().isEmpty()) {
+            product.setQuantity(newQuantity);
+            return true;
         }
-        
-    	return false;
+
+        return false;
     }
 
     @Override
     public boolean updatePosition(Integer productId, String newPos) throws InvalidProductIdException, InvalidLocationException, UnauthorizedException {
-        if(!isValidId(productId)) {
-        	throw new InvalidProductIdException();
+        if (!isValidId(productId)) {
+            throw new InvalidProductIdException();
         }
-        if(!isAuthorized(loggedUser.getRole())) {
-        	throw new UnauthorizedException();
+        if (!isAuthorized(loggedUser.getRole())) {
+            throw new UnauthorizedException();
         }
-        if(!Pattern.matches("^[0-9]+-[A-Za-z]-[0-9]*$", newPos)) {
-        	throw new InvalidLocationException();
+        if (!Pattern.matches("^[0-9]+-[A-Za-z]-[0-9]*$", newPos)) {
+            throw new InvalidLocationException();
         }
-        
+
         ProductType product = this.productTypeRepository.find(productId);
-    	
-        if(product != null && !isAssignedPosition(newPos)) {
-        	// resets or sets position
-    		product.setLocation(newPos.isEmpty() || newPos == null ? "" : newPos);
-    		return true;
-    	}
-        
+
+        if (product != null && !isAssignedPosition(newPos)) {
+            // resets or sets position
+            product.setLocation(newPos.isEmpty() || newPos == null ? "" : newPos);
+            return true;
+        }
+
         return false;
     }
 
@@ -242,9 +234,9 @@ public class EZShop implements EZShopInterface {
 
     @Override
     public Integer defineCustomer(String customerName) throws InvalidCustomerNameException, UnauthorizedException {
-        if(customerName == null || customerName.isEmpty())
-        	throw new InvalidCustomerNameException();
-        
+        if (customerName == null || customerName.isEmpty())
+            throw new InvalidCustomerNameException();
+
         Customer customer = new CustomerImpl();
         customer.setCustomerName(customerName);
         return customerRepository.create(customer);
@@ -257,95 +249,87 @@ public class EZShop implements EZShopInterface {
 
     @Override
     public boolean deleteCustomer(Integer id) throws InvalidCustomerIdException, UnauthorizedException {
-    	if(!isValidId(id)) { 
-    		throw new InvalidCustomerIdException();
-    	}
-    	if(!isAuthorized(loggedUser.getRole())) {
-    		throw new UnauthorizedException();
-    	}
-    	
-    	Customer customer = this.customerRepository.find(id);
-    	if(customer != null) {
-        	this.customerRepository.delete(customer);
-        	return true;
+        if (!isValidId(id)) {
+            throw new InvalidCustomerIdException();
         }
-    	
-    	return false;    
+        if (!isAuthorized(loggedUser.getRole())) {
+            throw new UnauthorizedException();
+        }
+
+        Customer customer = this.customerRepository.find(id);
+        if (customer != null) {
+            this.customerRepository.delete(customer);
+            return true;
+        }
+
+        return false;
     }
 
     @Override
     public Customer getCustomer(Integer id) throws InvalidCustomerIdException, UnauthorizedException {
-    	if(!isValidId(id)) { 
-    		throw new InvalidCustomerIdException();
-    	}
-    	if(!isAuthorized(loggedUser.getRole())) {
-			throw new UnauthorizedException();
-    	}
-  	
-    	return this.customerRepository.find(id);
+        if (!isValidId(id)) {
+            throw new InvalidCustomerIdException();
+        }
+        if (!isAuthorized(loggedUser.getRole())) {
+            throw new UnauthorizedException();
+        }
+
+        return this.customerRepository.find(id);
     }
 
     @Override
     public List<Customer> getAllCustomers() throws UnauthorizedException {
-    	if(!isAuthorized(loggedUser.getRole())) {
-			throw new UnauthorizedException();
-    	}
-        return this.customerRepository.findAll().stream().collect(Collectors.toList());
+        if (!isAuthorized(loggedUser.getRole())) {
+            throw new UnauthorizedException();
+        }
+        return this.customerRepository.findAll();
     }
 
     @Override
     public String createCard() throws UnauthorizedException {
-    	
-        return null;
+        LoyaltyCard loyaltyCard = new LoyaltyCardImpl();
+        return this.loyaltyCardRepository.create(loyaltyCard);
     }
 
     @Override
     public boolean attachCardToCustomer(String customerCard, Integer customerId) throws InvalidCustomerIdException, InvalidCustomerCardException, UnauthorizedException {
-        if(!isValidId(customerId)) {
-        	throw new InvalidCustomerIdException();
+        if (!isValidId(customerId)) {
+            throw new InvalidCustomerIdException();
         }
-        if(!Pattern.matches("^\\d{10}$", customerCard)) {
-        	throw new InvalidCustomerCardException();
+        if (!Pattern.matches("^\\d{10}$", customerCard)) {
+            throw new InvalidCustomerCardException();
         }
-        
+
         try {
-        	Customer customer = this.customerRepository.find(customerId);
-	    	if(customer != null && !isAssignedCardId(customerCard)) {
-	    		customer.setCustomerCard(customerCard);
-	    		return true;
-	    	}
-        } catch(JDBCConnectionException e) {
-        	// unreachable db
-        	return false;
+            Customer customer = this.customerRepository.find(customerId);
+            if (customer != null) {
+                customer.setCustomerCard(customerCard);
+                this.customerRepository.update(customer);
+                return true;
+            }
+        } catch (JDBCConnectionException e) {
+            // unreachable db
+            return false;
         }
-        
+
         return false;
     }
 
     @Override
     public boolean modifyPointsOnCard(String customerCard, int pointsToBeAdded) throws InvalidCustomerCardException, UnauthorizedException {
-	   if(!Pattern.matches("^\\d{10}$", customerCard)) {
-       		throw new InvalidCustomerCardException();
-       }
-	   try {
-		   Customer customer = this.customerRepository.findAll().stream()
-			   			.map(Customer.class::cast)
-			   			.filter(c -> c.getCustomerCard().equals(customerCard))
-			   			.findFirst()
-			   			.orElseGet(null);
-		   
-		   if(customer != null && pointsToBeAdded >= 0) {
-			   int oldPoints = customer.getPoints();
-			   customer.setPoints(pointsToBeAdded + oldPoints);
-			   return true;
-		   }
-	    	   
-	   }catch(JDBCConnectionException e){ 
-		   // unreachable db
-		   return false;
-	   }
-	   
-	   return false;
+        if (!Pattern.matches("^\\d{10}$", customerCard)) {
+            throw new InvalidCustomerCardException();
+        }
+        try {
+            LoyaltyCard loyaltyCard = this.loyaltyCardRepository.find(customerCard);
+            loyaltyCard.setPoints(loyaltyCard.getPoints() + pointsToBeAdded);
+            this.loyaltyCardRepository.update(loyaltyCard);
+        } catch (JDBCConnectionException e) {
+            // unreachable db
+            return false;
+        }
+
+        return false;
     }
 
     @Override
@@ -447,54 +431,57 @@ public class EZShop implements EZShopInterface {
     public double computeBalance() throws UnauthorizedException {
         return 0;
     }
-    
+
     /**
      * This method checks whether a provided role is valid
+     *
      * @param role: the role to check
      * @return true if valid role, false otherwise
      */
     private boolean isValidRole(String role) {
-    	List<String> roles = new ArrayList<>(List.of("Administrator", "Cashier", "ShopManager"));
-    	return role != null && !role.isEmpty() && roles.contains(role);
+        List<String> roles = Arrays.asList("Administrator", "Cashier", "ShopManager");
+        return role != null && !role.isEmpty() && roles.contains(role);
     }
-    
+
     /**
-     * 
      * @param role
      * @return
      */
     private boolean isAuthorized(String role) {
-    	return role.equals("Administrator") || role.equals("ShopManager");
-    	// oppure !role.equals("Cashier") ma lo trovo meno leggibile
+        return role.equals("Administrator") || role.equals("ShopManager");
+        // oppure !role.equals("Cashier") ma lo trovo meno leggibile
     }
-    
+
     /**
      * This methods checks whether a provided id is
      * not null and greater than 0
+     *
      * @param id: id to check
      * @return true if valid, false otherwise
      */
     private boolean isValidId(Integer id) {
-    	return id != null && id >= 0;
+        return id != null && id >= 0;
     }
-    
+
     /**
      * This methods checks whether a given location
      * is already used for some product inside store
+     *
      * @param location to check
      * @return true if used, false otherwise
      */
     private boolean isAssignedPosition(String location) {
-    	return this.productTypeRepository.findAll().stream().anyMatch(p -> p.getLocation().equals(location));
+        return this.productTypeRepository.findAll().stream().anyMatch(p -> p.getLocation().equals(location));
     }
-    
+
     /**
      * This method checks whether a given card Id
      * is already associated to some customer
-     * @param cardId
+     *
+     * @param customerCard
      * @return true if cardId in use, false otherwise
      */
     private boolean isAssignedCardId(String customerCard) {
-    	return this.customerRepository.findAll().stream().anyMatch(p -> p.getCustomerCard().equals(customerCard));
+        return this.customerRepository.findAll().stream().anyMatch(p -> p.getCustomerCard().equals(customerCard));
     }
 }
